--- a/assets/templates/footer.html
+++ b/assets/templates/footer.html
@@ -2,7 +2,7 @@
     <div class="container">
         <nav class="nav">
             <div class="logo">
-                <a href="index.html"><img alt="" src="img/logo.png"></a>
+                <a href="index.html"><img alt="" src="img/Logo.png"></a>
             </div>
             <ul>
                 <li><a href="#data" class="go-to">How it works</a></li>
