--- a/assets/templates/header.html
+++ b/assets/templates/header.html
@@ -14,7 +14,7 @@
     <div class="container">
         <nav class="nav">
             <div class="logo">
-                <a href="index.html"><img alt="" src="img/logo.png"></a>
+                <a href="index.html"><img alt="" src="img/Logo.png"></a>
             </div>
             <span class="open-menu">
                 <span></span>
