--- a/assets/templates/popup.html
+++ b/assets/templates/popup.html
@@ -4,9 +4,9 @@
         <div class="content">
             <div class="video">
                 <img id="video-cover" src="img/Video.png" alt="Video title">
-                <iframe id="player" src="https://www.youtube.com/embed/7sbbb7Dt3D8" frameborder="0"
-                    allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                <button id="play" class="play-btn">
+                <iframe id="playerPopoup" data-youtube="https://www.youtube.com/embed/7sbbb7Dt3D8?autoplay=1" src=""
+                    frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                <button id="play2" class="play-btn">
                 </button>
             </div>
         </div>
