--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -768,7 +768,9 @@
             display: none;
             width: 100%;
             height: 100%;
-
+            position: absolute;
+            top: 0;
+            left: 0;
         }
 
         .play-btn {
