--- a/assets/templates/popup.html
+++ b/assets/templates/popup.html
@@ -3,7 +3,7 @@
         <span class="close"></span>
         <div class="content">
             <div class="video">
-                <img id="video-cover" src="img/Video.png" alt="Video title">
+                <img id="video-cover2" src="img/Video.png" alt="Video title">
                 <iframe id="playerPopoup" data-youtube="https://www.youtube.com/embed/7sbbb7Dt3D8?autoplay=1" src=""
                     frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                 <button id="play2" class="play-btn">
