--- a/assets/templates/header.html
+++ b/assets/templates/header.html
@@ -2,10 +2,10 @@
     <span class="close-menu"></span>
     <nav>
         <ul>
-            <li><a href="#data" class="go-to">How it works</a></li>
-            <li><a href="#about" class="go-to">About us</a></li>
-            <li><a href="documentation.html">Documentation</a></li>
-            <li><a href="#form" class="btn go-to">Contact us</a></li>
+            <li><a href="index.html#data" class="go-to">How it works</a></li>
+            <li><a href="index.html#about" class="go-to">About us</a></li>
+            <li><a href="documents.html">Documentation</a></li>
+            <li><a href="index.html#form" class="btn go-to">Contact us</a></li>
         </ul>
     </nav>
 </div>
@@ -20,10 +20,10 @@
                 <span></span>
             </span>
             <ul class="desctop-menu">
-                <li><a href="#data" class="go-to">How it works</a></li>
-                <li><a href="#about" class="go-to">About us</a></li>
-                <li><a href="documentation.html">Documentation</a></li>
-                <li><a href="#form" class="btn go-to">Contact us</a></li>
+                <li><a href="index.html#data" class="go-to">How it works</a></li>
+                <li><a href="index.html#about" class="go-to">About us</a></li>
+                <li><a href="documents.html">Documentation</a></li>
+                <li><a href="index.html#form" class="btn go-to">Contact us</a></li>
             </ul>
         </nav>
     </div>
