--- a/assets/templates/footer.html
+++ b/assets/templates/footer.html
@@ -7,7 +7,7 @@
             <ul>
                 <li><a href="#data" class="go-to">How it works</a></li>
                 <li><a href="#about" class="go-to">About us</a></li>
-                <li><a href="documentation.html">Documentation</a></li>
+                <li><a href="documents.html">Documentation</a></li>
                 <li><a href="#form" class="go-to">Contact us</a></li>
             </ul>
         </nav>
