--- a/assets/scss/libs/header.scss
+++ b/assets/scss/libs/header.scss
@@ -111,15 +111,52 @@ header {
     position: absolute;
     z-index: 15;
     top: 0;
-    height: 60px;
+    height: 80px;
+    transition: all .3s ease;
+    transform: translateY(0%);
+    -webkit-transition: all .3s linear;
+    -moz-transition: all .3s linear;
+    -ms-transition: all .3s linear;
+    -o-transition: all .3s linear;
 
-    @media (min-width: 768px) {
+    &.active {
         height: 80px;
-
+        top: 0;
+        transform: translateY(0%);
+        -webkit-transform: translateY(0%);
+        -moz-transform: translateY(0%);
+        -ms-transform: translateY(0%);
+        -o-transform: translateY(0%);
+        transition: all .5s linear;
+        -webkit-transition: all .5s linear;
+        -moz-transition: all .5s linear;
+        -ms-transition: all .5s linear;
+        -o-transition: all .5s linear;
     }
 
+    &.out {
+        transform: translateY(-100%);
+        transition: transform .5s linear;
+        -webkit-transition: transform .5s linear;
+        -moz-transition: transform .5s linear;
+        -ms-transition: transform .5s linear;
+        -o-transition: transform .5s linear;
+    }
+
+    &.topAbsolute {
+        top: 0;
+        height: 80px;
+        position: absolute;
+        transform: translateY(0%);
+        -webkit-transform: translateY(0%);
+        -moz-transform: translateY(0%);
+        -ms-transform: translateY(0%);
+        -o-transform: translateY(0%);
+    }
+
+
     .open-menu {
-        top: 30px;
+        top: 40px;
         right: 20px;
         width: 39px;
         height: 33px;
@@ -224,10 +261,14 @@ header {
     }
 
     .nav {
-        min-height: 60px;
+        min-height: 80px;
         display: flex;
         align-items: center;
         justify-content: space-between;
+
+        @media (min-width: 768px) {
+            min-height: 60px;
+        }
     }
 
     .logo {
