--- a/assets/scss/libs/header.scss
+++ b/assets/scss/libs/header.scss
@@ -120,18 +120,18 @@ header {
     -o-transition: all 0s linear;
 
     &.active {
-        height: 80px;
+        // height: 80px;
         top: 0;
         transform: translateY(0%);
         -webkit-transform: translateY(0%);
         -moz-transform: translateY(0%);
         -ms-transform: translateY(0%);
         -o-transform: translateY(0%);
-        transition: all .5s linear;
-        -webkit-transition: all .5s linear;
-        -moz-transition: all .5s linear;
-        -ms-transition: all .5s linear;
-        -o-transition: all .5s linear;
+        transition: all .5s ease-in;
+        -webkit-transition: all .5s ease-in;
+        -moz-transition: all .5s ease-in;
+        -ms-transition: all .5s ease-in;
+        -o-transition: all .5s ease-in;
     }
 
     &.out {
